<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/et_email_from"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/main_email_from" />

    <EditText
        android:id="@+id/et_email_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/main_email_to"
        app:layout_constraintTop_toBottomOf="@id/et_email_from" />

    <EditText
        android:id="@+id/et_email_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/main_email_title"
        app:layout_constraintTop_toBottomOf="@id/et_email_to" />

    <EditText
        android:id="@+id/et_email_context"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/main_email_context"
        app:layout_constraintTop_toBottomOf="@id/et_email_title" />

    <Button
        android:id="@+id/btn_email_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/main_email_send"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/et_email_context" />

</android.support.constraint.ConstraintLayout>